@@ -3,6 +3,9 @@ $Id$
 
 v0.95.1		07-Jan-2008
 
+	mbtask:
+		Added last changes for MIB counters.
+
 	script:
 		Added support for Zenwalk.
 
